--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Apache::CryptHash.
 
+3.03  Fri Aug  8 18:16:29 PDT 2003
+	documentation update
+
 3.02  Sat Jan  4 16:31:48 PST 2003
 	remove really dumb reference to Apache.pm... sigh....
 
